[project]
name = "rag-model"
version = "0.1.0"
description = ""
authors = [
    {name = "sakya_sekhar",email = "sakyasekhar.g@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pinecone[grpc] (==5.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-google-genai (>=2.1.2,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "uuid (>=1.30,<2.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "numpy (==1.26.4)",
    "langchain-pinecone (>=0.2.3,<0.3.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "langchain-openai (>=0.3.11,<0.4.0)",
    "pdfminer (>=20191125,<20191126)",
    "pdfminer-six (>=20250327,<20250328)",
    "pymupdf (>=1.25.4,<2.0.0)",
    "langgraph (>=0.4.7,<0.5.0)",
    "urllib3 (==1.26.18)",
]

[tool.poetry]
packages = [{include = "rag_model", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
